# Robot-Grasping

./: README.md
grasp/: CMakeLists.txt  package.xml
grasp/launch/: primaryNodes.launch  secondaryNodes.launch
grasp/scripts/: aruco_pub.py  generalization_V1.py  generalization_V2.py  generalization_V3.py  generalization_origin.py  hi.py  jugaad.py  main_ekf.py  main_node.py  scaleAndRotate.py
grasp/src/: dynamixel_client.py  motorControl.py
grasp/srv/: GetPosition.srv  GetVelocity.srv  SetCurrent.srv  SetPosition.srv
