<?xml version="1.0"?>
<package format="2">
  <name>grasp</name>
  <version>0.0.0</version>
  <description>The grasp package</description>
  <maintainer email="sysidea@todo.todo">sysidea</maintainer>
  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>realsense2</build_depend>
  <build_depend>python3-numpy</build_depend>
  <build_depend>python3-sympy</build_depend>

  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>opencv</build_export_depend>
  <build_export_depend>realsense2</build_export_depend>
  <build_export_depend>python3-numpy</build_export_depend>
  <build_export_depend>python3-sympy</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>opencv</exec_depend>
  <exec_depend>realsense2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-sympy</exec_depend>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>

  <export>

  </export>
</package>
